fix: docker 네트워크 설정 변경

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -4,10 +4,12 @@ version: "3.8"
 services:
   django:
     build:
-      context: ../root_pj
+      context: ../keycloak_project
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
     depends_on:
       - keycloak
+    networks:
+      - app-net
     command: ["sleep", "infinity"]
