--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,17 @@ services:
     networks:
       - app-net
 
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.6
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - ES_JAVA_OPTS=-Xms512m -Xmx512m
+    ports:
+      - "9200:9200"
+    networks:
+      - app-net
+
 volumes:
   pgdata:
 
