--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,9 +29,12 @@ services:
       - postgres
     networks:
       - app-net
-
+  
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.6
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.14.0
+    container_name: elasticsearch
+    volumes:
+      - ./data/elastic:/var/lib/elasticsearch/data
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
